# swen343-inventory

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  api_doc.yaml  docker-compose.yml  index.md
backend/: .env.dev  Cargo.toml  nohup.out
backend/migrations/2019-09-28-233353_create_products/: up.sql
backend/migrations/2019-10-10-190011_create_warehouses/: down.sql  up.sql
backend/migrations/2019-10-10-190021_create_items/: up.sql
backend/migrations/2019-10-12-201642_create_boxes/: down.sql  up.sql
backend/migrations/2019-10-15-142608_create_pallets/: down.sql  up.sql
backend/migrations/2019-10-15-145804_create_boxes/: down.sql  up.sql
backend/migrations/2019-10-20-185840_create_rules/: down.sql
backend/migrations/2019-10-20-200447_create_rules/: down.sql  up.sql
backend/postman/: Development.postman_environment.json  Inventory-Full-V1.postman_collection.json  Inventory-Items-Tests.postman_collection.json  Inventory-Palettes-Tests(no-put).postman_collection.json  Inventory-Palettes-Tests.postman_collection.json  Inventory.postman_collection.json
backend/src/: app.rs  db.rs  http.rs  lib.rs  models.rs  rules.rs  rulesactor.rs  schema.rs
backend/src/app/: boxes.rs  mod.rs  pallets.rs  products.rs  rules.rs
backend/src/app/v1/: boxes.rs  items.rs  mod.rs  pallets.rs  rules.rs  warehouses.rs
backend/src/app/v2/: items.rs  mod.rs  order.rs  stock.rs  (+1 more)
backend/src/db/: boxes.rs  items.rs  mod.rs  pallets.rs  products.rs  rules.rs  warehouses.rs
backend/src/models/: boxes.rs  items.rs  mod.rs  pallets.rs  products.rs  rules.rs  warehouses.rs
(+62 files in other folders)
