[package]
name = "erp_inventory"
version = "0.1.0"
authors = [
    "Nick Mosher <nicholastmosher@gmail.com>",
    "Bryce Murphy <bm5890@rit.edu>",
    "Leon Kuhne <lxk1170@rit.edu>",
    "Fikayo Olatunji <oxo3928@rit.edu>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.101", features = ["derive"] }
diesel = { version="1.4.2", features = ["postgres", "r2d2"] }
actix = "0.8.3"
actix-web = "1.0.8"
dotenv = "0.14.1"
futures = "0.1.29"
num_cpus = "1.10.1"
listenfd = "0.3.3"

[lib]
name = "erp"
path = "src/lib.rs"

[[bin]]
name = "erp"
path = "src/bin/main.rs"
